--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "file-loader": "^4.0.0",
     "lodash": "^4.17.11",
-    "svg-sprite-loader": "^4.1.6",
+    "svg-sprite-loader": "4.1.6",
     "url-loader": "^2.0.0",
     "vue-svg-loader": "^0.12.0"
   },
